--- a/exercicio003 modelos de caixas/style.css
+++ b/exercicio003 modelos de caixas/style.css
@@ -1,59 +1,28 @@
-@charset "UTF-8";
-
-body{
-    background-color: beige;
-    font-family: Arial, Helvetica, sans-serif;
+.example{
+    color: #fff;
     text-align: justify;
-    text-indent: 15px;
 }
-header{
-    background-color: aquamarine;
-    padding: 10px;
-    margin: 10px;
-    text-align: center;
+.example::after{
+    content:'dbshnjkm,dsc';
+    display: inline-block;
+    width: 100%;
 }
-nav{
-    background-color: rgb(142, 131, 152);
-    padding: 3px;
-    box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.645);
-    border-radius: 20px;
-
+.example-item{
+    display:inline-block;
+    width:25%;
+    height: 150px;
 }
-nav > a{
-    color: rgba(139, 43, 43, 0.874);
-    font-weight: bold;
-    margin-right: 30px;
- 
-    
-
+.example-item-first{
+    background-color: #faa116;
 }
-nav >a:hover {
-    text-decoration:none;
-    background-color: blueviolet;
-    color: aliceblue;
+.example-item-second{
+    background-color: #57c7c3;
+   
+}
+.example-item-third {
+    background-color: #389703;
     
 }
-main{
-    background-color: white;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 20px;
-    
+p{
+    text-align: justify;
 }
-article{
- color: rgba(58, 197, 97, 0.592);
-}
-article > aside{
-    color: rgba(139, 121, 121, 0.592);
-}
- footer{
-     background-color: rgba(137, 134, 134, 0.611);
-     color: white;
-     text-align: center;
-     padding: 1px;
-     margin: 0px;
- }
-
- section#assuntos{
-     background-color: aqua;
- }
